# venturi

./: .gitignore  CMakeLists.txt  README.md
lang/: flux_lang.peg  venturi_lang.peg
sims/: circle.flx  circle_3d.flx  claude.flx  parser_test_1.flx  parser_test_1.vnt  simple_1.flx  stress_1.flx  tesla.flx  turbine_simple.flx  venturi.flx  venturi_large.flx  wall_collapse.flx
src/: CMakeLists.txt  main.cc
src/engine/: CMakeLists.txt  sim.h  sim2d.cc  sim2d.h  sim3d.cc  sim3d.h
src/engine/mac/: mac.h  mac2d.cc  mac2d.h  mac3d.cc  mac3d.h
src/engine/utils/: interpolators.h
src/fluxlang/: CMakeLists.txt  parser.cc  parser.h  parser_2d.cc  parser_2d.h  runtime.cc  runtime.h  transformer.cc  transformer.h  utils.h
src/fluxlang/ast/: ast.h  nodes.cc  nodes.h  visitor.cc  visitor.h
src/fluxlang/vm/: vm.h
src/parser/: CMakeLists.txt  parser_2d.cc  parser_2d.h  utils.h
src/renderer/: CMakeLists.txt  renderer.h  renderer_2d.cc  renderer_2d.h  utils.h
src/renderer/2d/: renderer_2d.cc  renderer_2d.h
src/renderer/3d/: camera.h  renderer_3d.cc  renderer_3d.h
src/renderer/3d/camera/: camera.h  gimbal_control.h
src/renderer/3d/shaders/: 3d.frag  3d.vert
src/solver/: CMakeLists.txt  iccg.cc  iccg.h  ivp.h  linear_ode_solver.cc  linear_ode_solver.h  preconditioners.cc  preconditioners.h  pressure_solvers.h
src/utils/: CMakeLists.txt  interpolators.h  physical_consts.h
tests/: CMakeLists.txt
tests/mac/: mac_2d_test.cc
utils/: vis_laplacian.py  vis_laplacian_ii.py
